      lexing of multi-gigabyte files.
   o mlnlffigen
    * Added command-line switches -linkage archive and -linkage shared.
    * Deprecated command-line switch -linkage static.
    * Added support for ia64 and hppa targets.
   o mlyacc
    * Eliminated top-level 'type int = Int.int' in output.
    * Include (*#line line:col "file.grm" *) directives in output.

* 2010-03-12
  - Fixed bug in elaboration of datatype declarations with withtype
    bindings.

* 2009-12-11
  - Fixed performance bug in ref flatten SSA2 optimization.

* 2009-12-09
  - Fixed performance bug in simplify types SSA optimization.

* 2009-12-02
  - Fixed bug in amd64 codegen register allocation of indirect C calls.

* 2009-09-17
  - Fixed bug in IntInf.scan and IntInf.fromString where leading
    spaces were only accepted if the stream had an explicit sign
    character.

* 2009-07-10
  - Added combine conversions SSA optimization.

* 2009-06-09
   - Removed deprecated command line switch -show-anns {false, true}.

* 2009-04-18
   - Removed command line switches -keep sml and -stop sml.  Their
     meaning was unclear with .mlb files; their effect with .cm files
     can be achieved with -stop f.

* 2009-04-16
   - Fixed bug in IntInf.~>> that could cause a glibc assertion
     failure.

* 2009-04-01
   - Fixed exported type of MLton.Process.reap.

* 2009-01-27
   - Added MLton.Socket.Address.toVector to get the network-byte-order
     representation of an IP address.

* 2008-11-10
   - Fixed bug in MLton.size and MLton.share when tracing the current
     stack.

* 2008-10-27
   - Fixed phantom typing of sockets by hiding the representation of socket
     types.  Previously the representation of sockets was revealed rendering
     the phantom types useless.

* 2008-10-10
   - Fixed bug in nexted _export/_import functions.

* 2008-09-12
   - Improved constant folding of floating point operations.

* 2008-08-20
   - Store the card/cross map at the end of the allocated ML heap;