@@ -1,4 +1,5 @@
-/* Copyright (C) 1999-2008 Henry Cejtin, Matthew Fluet, Suresh
+/* Copyright (C) 2010 Matthew Fluet.
+ * Copyright (C) 1999-2008 Henry Cejtin, Matthew Fluet, Suresh
  *    Jagannathan, and Stephen Weeks.
  * Copyright (C) 1997-2000 NEC Research Institute.
  *
@@ -25,8 +26,21 @@ static inline void GC_memcpy (pointer src, pointer dst, size_t size) {
   assert (isAligned ((size_t)src, sizeof(unsigned int)));
   assert (isAligned ((size_t)dst, sizeof(unsigned int)));
   assert (isAligned (size, sizeof(unsigned int)));
-  assert (dst <= src or src + size <= dst);
   if (src == dst)
     return;
+  assert (! (src <= dst and dst < src + size));
+  assert (! (dst <= src and src < dst + size));
   memcpy (dst, src, size);
+}
+
+static inline void GC_memmove (pointer src, pointer dst, size_t size) {
+  if (DEBUG_DETAILED)
+    fprintf (stderr, "GC_memmove ("FMTPTR", "FMTPTR", %"PRIuMAX")\n",
+             (uintptr_t)src, (uintptr_t)dst, (uintmax_t)size);
+  assert (isAligned ((size_t)src, sizeof(unsigned int)));
+  assert (isAligned ((size_t)dst, sizeof(unsigned int)));
+  assert (isAligned (size, sizeof(unsigned int)));
+  if (src == dst)
+    return;
+  memmove (dst, src, size);
 }
